--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html class="bg-gray-400">
     <head>
         <meta charset="UTF-8">
+        <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
     </head>
